--- a/crudvladflutter/android/app/build.gradle
+++ b/crudvladflutter/android/app/build.gradle
@@ -40,6 +40,9 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 flutter {
