--- a/crudvladflutter/pubspec.yaml
+++ b/crudvladflutter/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.3
+  flutter_colorpicker: ^1.0.3 # Adjust to your version
 
 dev_dependencies:
   flutter_test:
